# automerge-model-checker

./: .gitignore  Cargo.toml  LICENSE.md  README.md  bench.py  bench.sh  flake.nix  plot.py
.github/workflows/: ci.yaml  docs.yaml
amc/: Cargo.toml
amc-cli/: Cargo.toml
amc-cli/src/: lib.rs
amc-core/: Cargo.toml
amc-core/examples/: counter.rs
amc-core/src/: application.rs  bytes.rs  client.rs  doc.rs  document.rs  global.rs  lib.rs  model.rs  msg.rs  register.rs  report.rs  server.rs  trigger.rs
amc-todo/: Cargo.toml
amc-todo/src/: app.rs  apphandle.rs  client.rs  main.rs  model.rs  trigger.rs
amc/src/: app.rs  client.rs  lib.rs  main.rs  model.rs
amc/src/client/: delete.rs  insert.rs  put.rs
applications/amc/: Cargo.toml
applications/amc-automerge/: Cargo.toml
applications/amc-automerge/src/: app.rs  client.rs  driver.rs  lib.rs  main.rs  model.rs  scalar.rs  trigger.rs
applications/amc-automerge/src/client/: delete.rs  increment.rs  insert.rs  put.rs  splice.rs
applications/amc-counter/: Cargo.toml
applications/amc-counter/src/: lib.rs  main.rs
applications/amc-moves/: Cargo.toml
applications/amc-moves/src/: lib.rs  main.rs
applications/amc-todo/: Cargo.toml
applications/amc-todo/src/: app.rs  apphandle.rs  driver.rs  lib.rs  main.rs  trigger.rs
applications/amc/src/: main.rs
applications/amc/src/client/: put.rs
crates/amc/: Cargo.toml
crates/amc-cli/: Cargo.toml
crates/amc-cli/src/: lib.rs
crates/amc-core/examples/: counter.rs
crates/amc-core/src/: client.rs  server.rs  trigger.rs
crates/amc-test/: Cargo.toml
crates/amc-test/src/: lib.rs
crates/amc/examples/: counter.rs
crates/amc/src/: cli.rs  client.rs  combinators.rs  document.rs  drive.rs  global.rs  lib.rs  model.rs  properties.rs  report.rs  server.rs  trigger.rs
src/: app.rs  client.rs  doc.rs  lib.rs  main.rs  model.rs  peer.rs  register.rs  report.rs  server.rs  trigger.rs
src/client/: delete.rs  insert.rs  put.rs
src/doc/: inner.rs
