[package]
name = "amc-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
automerge = "0.2.0"
num_cpus = "1.13.1"
stateright = "0.29.0"
amc-core = { path = "../amc-core" }
rand = "0.8.5"
