[package]
name = "amc-counter"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
automerge = "0.3.0"
stateright = "0.29.0"
rand = "0.8.5"
amc = { path = "../../crates/amc" }

[dev-dependencies]
expect-test = "1.4.0"
