[package]
name = "amc-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
automerge = "0.2.0"
stateright = "0.29.0"
rand = "0.8.5"
amc = { path = "../../crates/amc" }
smol_str = "0.1.23"
tinyvec = { version = "1.6.0", features = ["alloc"] }

[dev-dependencies]
expect-test = "1.4.0"
