[package]
name = "amc"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Automerge model checker"
repository = "https://github.com/jeffa5/automerge-model-checker"

[dependencies]
stateright = "0.29.0"
automerge = "0.3.0"
clap = { version = "4.1.1", features = ["derive"] }
base64 = "0.21.0"
num-format = { version = "0.4.4", features = ["with-system-locale"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
